1.3 (unreleased)
----------------

- add :meth:`atomx.Atomx.delete` to send a ``HTTP DELETE`` request to the api


1.2
---

- you can now remove model attributes with `del`
- add :meth:`atomx.models.Report.csv` property that returns the report content as a list
- save logged in user as `user` property to :class:`atomx.Atomx`
- add network reports
- try to determine report scope from user access rights if no scope was specified


1.1
---

- fix: setup.py not working under some environments (`open` used wrong codec)
- add SellerProfile model
- add `offset` parameter to report.get


1.0
---

- First release